2000-08-10  Peter Williams  <peterw@helixcode.com>

	* mail-tools.c (mail_tool_filter_contents_into): Delete the source
	folder if told to and if it's empty
	(mail_tool_get_local_movemail_path): New function.

2000-08-10  Dan Winship  <danw@helixcode.com>

	* mail-callbacks.c (reply_to_all): Fix a bug in the async changes.
	(This was identical to reply_to_sender.)

2000-08-10  Not Zed  <NotZed@HelixCode.com>

	* mail-local.c (do_local_reconfigure_folder): Update for
	append_message api change.

	* message-list.c (message_list_regenerate): Change for search api
	change.
	(ml_tree_value_at): Add a colour column, based on the colour
	assigned in the summary.
	(message_list_init_renderers): Init colour column.

2000-08-09  Peter Williams  <peterw@helixcode.com>

	* mail-display.c (part_for_url): Remove a gtk_object_get_data

2000-08-09  Cody Russell  <bratsche@gnome.org>

	* folder-browser-factory.c, mail-view.c: Make the toolbars
	honor the user's gnomecc settings for detachable toolbars.

2000-08-09  Jeffrey Stedfast  <fejj@helixcode.com>
  
	* mail-ops.c (composer_send_cb): Get the from address set in the
	composer, if that fails ONLY THEN get the default from mail config

	* mail-config.c (mail_config_get_identities): New convenience
	function for getting a list of the configured identities

2000-08-09  Dan Winship  <danw@helixcode.com>

	* mail-display.c (on_object_requested): Support controls as well
	as embeddables.

2000-08-09  Jeffrey Stedfast  <fejj@helixcode.com>

	* mail-view.c (mail_view_create): Changed to only take a
	FolderBrowser argument

	* mail-ops.c (real_view_msg): Create a new FolderBrowser for each
	message being opened in a new window. Also set the
	message_list->cursor_uid and mail_display->current_message to the
	appropriate values.
	(real_view_msg): Updated to reflect changes in the mail_view_create

	* message-list.c (on_right_click): Nicify a little, add in a menu
	separator between VFolder and Filter stuff.
