@@ -1,3 +1,8 @@
+2000-08-10  Jeffrey Stedfast  <fejj@helixcode.com>
+
+	* mail-callbacks.c (composer_send_cb): Fix compile warning by
+	casting the object to a CamelObject
+
 2000-08-10  Peter Williams  <peterw@helixcode.com>
 
 	* mail-tools.c (mail_tool_filter_contents_into): Delete the source
